--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Finnish literature -- History and criticism'
 - !lcsh 'Kalevala'
 - !lcc 'PH'
+- GITenberg
 title: 'Suomalaisen kirjallisuuden historia I: Kalevala'
 url: http://www.gutenberg.org/ebooks/45984
